Fix code block scrollbars

--- a/Documentation/Blazorise.Docs/Styles/_code.scss
+++ b/Documentation/Blazorise.Docs/Styles/_code.scss
@@ -4,7 +4,7 @@
     border-radius: 0 0 4px 4px;
     padding: 16px;
     font-size: .9rem;
-    /*overflow: auto;*/
+    overflow: auto;
 
     & pre {
         height: 100%;
@@ -15,6 +15,7 @@
         -webkit-font-smoothing: subpixel-antialiased;
         direction: ltr;
         margin-bottom: 0;
+        overflow: visible;
     }
 
     & .html + .csharp {
